Adding more h1 header

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ fetch(searchUrl)
 
 <h1>Pugeyeu ki pugineu ni</h1>
 <p>My Third paragraph.</p>
+<h1>Ae aama sutnu pardaina hajur lai</h1>
 </body>
 
 </html>
