--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<<!DOCTYPE html>
 <html>
 <head>
     <script>
@@ -25,9 +25,9 @@ fetch(searchUrl)
 <h1>k Anar banaunu bha ni testo</h1>
 </body>
 
-</html> -->
+</html>
 
-<html><head>
+<!--html><head>
 </head><body>
     <video src="" ></video>
     <br />
@@ -46,4 +46,4 @@ var video = document.querySelector('video');
 };
 })
 .catch(function(err) { console.log(err.name + ": " + err.message); })
-</script></html>
+</script></html -->
